# rsomics-limma-duplicate-correlation

./: Cargo.toml  README.md
benches/: bench.rs
src/: block.rs  cli.rs  lib.rs  matrix.rs  reml.rs
tests/: compat.rs  dupcor_oracle.R  mkfixture.R
tests/golden/: blocks.tsv  degenerate_blocks.tsv  degenerate_design.tsv  degenerate_expr.tsv  degenerate_result.expected.tsv  design.tsv  expr.tsv  result.expected.tsv
