[package]
name = "rsomics-limma-duplicate-correlation"
version = "0.1.2"
description = "REML consensus intra-block (duplicate-spot / technical-replicate) correlation for a log-expression matrix + design + block factor — a clean-room Rust reimplementation of limma's duplicateCorrelation"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-world"
authors = ["Zane Leong <efd@live.com>"]

[[bin]]
name = "rsomics-limma-duplicate-correlation"
path = "src/main.rs"

[lib]
name = "rsomics_limma_duplicate_correlation"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }
rayon = "1"
ryu = "1"

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "bench"
harness = false
